log
Sat, Apr 19, 2025  3:30:21 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025  3:32:33 PM: 
 tests:  0|6
total_score: 0/70
372ddd5
Sun, Apr 20, 2025  5:04:27 PM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:43:5: error: 'lugarHash' undeclared (first use in this function)
   43 |     lugarHash = hash(key, map->capacity);
      |     ^~~~~~~~~
hashmap.c:43:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:44:25: error: 'index' undeclared (first use in this function)
   44 |     while (map->buckets[index] != NULL && map->buckets[index]->key != NULL) {
      |                         ^~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
fd4364a
Sun, Apr 20, 2025  5:12:41 PM: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  4|5
total_score: 20/70
60dc1da
Sun, Apr 20, 2025  5:13:33 PM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
6ba3e5e
Sun, Apr 20, 2025  5:14:58 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
7fab831
Sun, Apr 20, 2025  5:23:44 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|5
total_score: 20/70
166ec04
Sun, Apr 20, 2025  6:48:41 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|4
total_score: 30/70
9c9a0ba
Sun, Apr 20, 2025  6:50:01 PM: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  4|5
total_score: 20/70
66a5784
Sun, Apr 20, 2025  6:50:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e8c4599
Sun, Apr 20, 2025  7:15:46 PM: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'enlarge':
hashmap.c:64:39: error: expected ';' before ')' token
   64 |     for (int i = 0; i >= map->capacity){
      |                                       ^
      |                                       ;
hashmap.c:68:25: error: invalid initializer
   68 |             Pair temp = map->buckets[i];
      |                         ^~~
hashmap.c:71:32: error: invalid type argument of '->' (have 'Pair')
   71 |             insertMap(map, temp->key, temp->value);
      |                                ^~
hashmap.c:71:43: error: invalid type argument of '->' (have 'Pair')
   71 |             insertMap(map, temp->key, temp->value);
      |                                           ^~
hashmap.c:72:18: error: incompatible type for argument 1 of 'free'
   72 |             free(temp);
      |                  ^~~~
      |                  |
      |                  Pair
In file included from test.c:2:
C:/msys64/ucrt64/include/stdlib.h:453:27: note: expected 'void *' but argument is of type 'Pair'
  453 |   void __cdecl free(void *_Memory);
      |                     ~~~~~~^~~~~~~
hashmap.c:67:18: warning: unused variable 'nuevoHash' [-Wunused-variable]
   67 |             long nuevoHash = hash(map->buckets[i]->key, map->capacity);
      |                  ^~~~~~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cb81c24
Sun, Apr 20, 2025  7:17:04 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1f0ec12
Sun, Apr 20, 2025  7:18:24 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90e9352
Sun, Apr 20, 2025  7:47:26 PM: 
 hashmap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  6|3
total_score: 40/70
2102f32
Sun, Apr 20, 2025  8:37:25 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
555c5e7
Sun, Apr 20, 2025  8:38:56 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 40/70
b61f5d4
Sun, Apr 20, 2025  8:41:08 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
8e97f38
